buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7.38'
    }
}

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '6.0.+'
}

apply plugin: 'org.spongepowered.mixin'

version = project.mod_version
group = project.mod_group_id

base {
    archivesName = project.mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

// ForgeGradle jar-in-jar: required so the shipped jar carries MixinExtras.
jarJar.enable()

def gameTestNamespace = findProperty("slabbedGameTestNamespace") ?: project.mod_id

// Forge 1.20.1 bootstrap gate.
//
// The tree was seeded from the NeoForge 1.21.1 0.5.2-alpha.2 line, so every source
// here is still written against NeoForge 21.1 / MC 1.21.1. This exclude list is the
// same one the donor line used to keep optional dev/debug/recorder tooling out of the
// main compile; it is NOT a statement that the remainder is ported. Files graduate
// into a green compile one at a time as the loader translation proceeds.
def slabbedBootstrapExcludes = [
        "com/slabbed/debug/**",
        "com/slabbed/dev/**",
        "com/slabbed/client/debug/**",
        "com/slabbed/client/CaptureProfile.java",
        "com/slabbed/client/GapFillerOverlay.java",
        "com/slabbed/client/NeoForgeChainCeilingClientProof.java",
        "com/slabbed/client/NeoForgeClientProofCanary.java",
        "com/slabbed/client/NeoForgeClientWorldProof.java",
        "com/slabbed/client/NeoForgeFenceGateClientProof.java",
        "com/slabbed/client/ScreenshotCaptureContext.java",
        "com/slabbed/client/ScreenshotCaptureService.java",
        "com/slabbed/client/ScreenshotFlightLock.java",
        "com/slabbed/client/TargetDyOverlay.java",
        "com/slabbed/client/runtime/ModelDyTranslateTraceBridge.java",
        "com/slabbed/mixin/BlockItemPlaceTraceMixin.java",
        "com/slabbed/mixin/SlabBlockPlacementFixMixin.java",
        "com/slabbed/mixin/client/Beta*.java",
        "com/slabbed/mixin/debug/**",
        "com/slabbed/util/Beta4ManualLiveTrace.java",
        "com/slabbed/util/Beta4PlacementAuthorRecorder.java",
        "com/slabbed/util/Beta35FenceWallLiveInspectRecorder.java",
        "com/slabbed/util/Beta35LiveTorchCaptureRecorder.java",
        "com/slabbed/util/Beta35SlabHeightHitAcceptanceRecorder.java",
        "com/slabbed/util/Beta35SlabJumpSourceTruthRecorder.java",
        "com/slabbed/util/DebugTraceContext.java",
        "com/slabbed/util/Mc1211TrapdoorUnderBottomRecorder.java",
        "com/slabbed/util/SlabbedAuditBridge.java",
        "com/slabbed/util/SlabbedDebug.java"
]

sourceSets {
    main {
        java {
            setSrcDirs(["src/main/java", "src/client/java"])
            slabbedBootstrapExcludes.each { exclude it }
        }
        resources {
            setSrcDirs(["src/main/resources", "src/client/resources"])
            exclude "fabric.mod.json"
            exclude "slabbed.debug.mixins.json"
        }
    }
    // Standalone classifier shim that claims the Terrain Slabs mod id inside the GameTest server
    // only. It must never depend on main and must never ship: the compat gate's loaded-check leg
    // is only provable headlessly if something answers to that mod id.
    tsshim {
        java {
            setSrcDirs(["src/tsshim/java"])
        }
        resources {
            setSrcDirs(["src/tsshim/resources"])
        }
        compileClasspath += configurations.compileClasspath
        runtimeClasspath += output
    }
    gametest {
        java {
            setSrcDirs(["src/gametest/java", "src/main/java"])
            // Tests graduate one at a time as they are translated off the donor's registration.
            // Keep this list explicit: the suite-count gate reads it to prove the suite that ran
            // is the suite that was intended.
            setIncludes([
                    "com/slabbed/test/CeilingFlushRulingTest.java",
                    "com/slabbed/test/ChainColumnLoweredCapCoherenceTest.java",
                    "com/slabbed/test/ChainSurvivalReproTest.java",
                    "com/slabbed/test/CombinedSlabChainingMatrixTest.java",
                    "com/slabbed/test/DeepDyConsentTest.java",
                    "com/slabbed/test/DySpecificationTest.java",
                    "com/slabbed/test/LegacySupportSeatResolutionTest.java",
                    "com/slabbed/test/Mc1211GoblinRouteCanaryGameTest.java",
                    "com/slabbed/test/NeighborUpdateInvarianceTest.java",
                    "com/slabbed/test/NeverPopBreadthTest.java",
                    "com/slabbed/test/P6InteractionParityTest.java",
                    "com/slabbed/test/P7VisualParityTest.java",
                    "com/slabbed/test/SlabHeightStepCullTest.java",
                    "com/slabbed/test/SlabPlacementHeightLifecycleTest.java",
                    "com/slabbed/test/SlabPlacementHeightPersistenceSyncTest.java",
                    "com/slabbed/test/SlabPlacementHeightResolverTest.java",
                    "com/slabbed/test/SlabPlacementHeightSchemaTest.java",
                    "com/slabbed/test/SlabbedHotPathAllocationRegressionTest.java",
                    "com/slabbed/test/SlabbedLabFixtureTest.java",
                    // Not a test: the suite's reach into the capability seam that replaced
                    // the donor's attachment handles. Carries no @GameTest, so it does not
                    // move the suite count.
                    "com/slabbed/test/SlabbedTestAccess.java",
                    "com/slabbed/test/TerrainSlabsHeadlessClassifierTest.java",
                    "com/slabbed/test/UpFaceEdgeCombineGuardTest.java",
                    "com/slabbed/test/VanillaDownstreamOwnershipTest.java",
                    // Pulled in from src/main so the fixture builder compiles for the suite
                    // WITHOUT shipping: main's own exclude keeps com/slabbed/dev/** out of the
                    // jar, and the release hygiene gate asserts it never reaches an archive.
                    "com/slabbed/dev/SlabbedLabFixtures.java"
            ])
        }
        resources {
            setSrcDirs(["src/gametest/resources"])
            exclude "fabric.mod.json"
        }
        compileClasspath += sourceSets.main.output + configurations.compileClasspath
        runtimeClasspath += sourceSets.main.output + configurations.runtimeClasspath
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
}

minecraft {
    mappings channel: project.mapping_channel, version: project.mapping_version
    copyIdeResources = true

    runs {
        client {
            workingDirectory project.file("run")
            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file("run")
            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            args "--nogui"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        gameTestServer {
            workingDirectory layout.buildDirectory.dir("run/gameTest").get().asFile
            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            property "forge.gameTestServer", "true"
            property "forge.enabledGameTestNamespaces", gameTestNamespace
            args "--nogui"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                    source sourceSets.gametest
                }
                // Loaded ONLY here. The real Terrain Slabs mod and this shim claim the same id,
                // so they can never coexist in one run.
                terrain_slabs {
                    source sourceSets.tsshim
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "slabbed.refmap.json"
    config "slabbed.mixins.json"
    config "slabbed.client.mixins.json"
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    // Forge 1.20.1 does NOT bundle MixinExtras (NeoForge does). The donor tree
    // uses @WrapOperation/@WrapMethod/@Local on the placement path, so the mod
    // has to ship it jar-in-jar. 0.4.x is the line that has @WrapMethod and
    // still targets Mixin 0.8.5, which is what Forge 47 ships.
    annotationProcessor "io.github.llamalad7:mixinextras-common:0.4.1"
    compileOnly "io.github.llamalad7:mixinextras-common:0.4.1"
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:[0.4.1,0.5)")) {
        jarJar.ranged(it, "[0.4.1,0.5)")
    }
}

// A gametest run must never be able to read a previous run's log or world. The donor line hit
// exactly this: a reused world silently changed matrix rows, and a crashed run can leave a stale
// "All N required tests passed" summary behind for the count gate to find.
tasks.register("cleanGameTestRunDirectory", Delete) {
    delete(layout.buildDirectory.dir("run/gameTest"))
}

tasks.register("syncGameTestStructures", Sync) {
    dependsOn(tasks.named("cleanGameTestRunDirectory"))
    from("gameteststructures")
    into(layout.buildDirectory.dir("run/gameTest/gameteststructures"))
}

tasks.matching { it.name == "runGameTestServer" }.configureEach {
    dependsOn(tasks.named("gametestClasses"))
    dependsOn(tasks.named("tsshimClasses"))
    dependsOn(tasks.named("syncGameTestStructures"))
}

tasks.register("runGameTest") {
    group = "verification"
    description = "Runs the isolated Forge GameTest server on a clean run directory."
    dependsOn(tasks.named("runGameTestServer"))
}

tasks.named("processResources", ProcessResources).configure {
    def replaceProperties = [
            minecraft_version      : project.minecraft_version,
            minecraft_version_range: project.minecraft_version_range,
            forge_version          : project.forge_version,
            forge_version_range    : project.forge_version_range,
            loader_version_range   : project.loader_version_range,
            mod_id                 : project.mod_id,
            mod_name               : project.mod_name,
            mod_license            : project.mod_license,
            mod_version            : project.mod_version,
            mod_authors            : project.mod_authors,
            mod_description        : project.mod_description
    ]
    inputs.properties replaceProperties
    filesMatching("META-INF/mods.toml") {
        expand replaceProperties
    }
}

tasks.named("jar", Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : project.mod_id,
                "Specification-Vendor"    : project.mod_authors,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.mod_version,
                "Implementation-Vendor"   : project.mod_authors
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xmaxerrs" << "5000"
}
